--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <h1>Web Sprint 3 Challenge </h1>
+  <h1>Web Sprint 3 Challenge</h1>
   <p>❗ See the last script tag for instructions on completing your Challenge</p>
   <!-- widgets start, do not modify -->
   <section class="widget">
@@ -46,6 +46,47 @@
 
     // 👉 CHALLENGE 1 - Integers
     class Integers {
+      constructor(...args) {
+    this.ints = args.filter(Number.isInteger);
+  }
+
+  getAll() {
+    return [...this.ints];
+  }
+
+  getEvens() {
+    return this.ints.filter(num => num % 2 === 0);
+  }
+
+  getNegatives() {
+    return this.ints.filter(num => num < 0);
+  }
+
+  getAllSquared() {
+    return this.ints.map(num => num * num); 
+  }
+
+  pop() {
+    let copy = [...this.ints];
+    let lastElement = copy.pop();
+    this.ints = copy;
+    return lastElement; 
+  }
+
+  push(int) {
+    let copy = [...this.ints, int];
+    this.ints = copy;
+    return this.ints;
+  }
+
+  getEveryNth(n) {
+    return this.ints.filter((_, index) => index % n === 0);
+  }
+
+  getAllReversed() {
+    return [...this.ints].reverse();
+  }
+}
       // 🧠 Constructor takes **any** number of arguments, which are integers
       // 🧠 Instances have an `ints` property which is an array holding the integers above in the same order
       // 🧠 Implement a `getAll` method which returns the data held in the `ints` property
@@ -59,10 +100,48 @@
       // ❗ WARNING: except for `getAllReversed`, methods must respect the order of the integers
       // ❗ WARNING: note that none of the methods actually mutate the `ints` property
 
-    }
+    
 
     // 👉 CHALLENGE 2 NerfGun
     class NerfGun {
+      constructor(totalProjectiles) {
+    this.maxCapacity = totalProjectiles;
+    this.currentCapacity = totalProjectiles;
+    this.safetyOn = true;
+  }
+
+  shoot() {
+    if (this.currentCapacity > 0 && !this.safetyOn) {
+      this.currentCapacity--;
+      return "Bang!";
+    } else {
+      return "Click!";
+    }
+  }
+
+  reload(number) {
+    if (typeof number !== "number" || number <= 0) {
+      return "Error reloading!";
+    }
+
+    this.currentCapacity += number;
+
+    if (this.currentCapacity > this.maxCapacity) {
+      this.currentCapacity = this.maxCapacity;
+    }
+
+    return `${this.currentCapacity} projectiles left!`;
+  }
+
+  toggleSafety() {
+    this.safetyOn = !this.safetyOn;
+
+    if (this.safetyOn) {
+      return "Safety enabled!";
+    } else {
+      return "Safety disabled!";
+    }
+  }
       // 🧠 Constructor takes one argument: the total number of projectiles supported by the instance
       // 🧠 New instances initialize fully loaded and with the safety on
       // 🧠 Instances have a `shoot` method that takes no arguments:
@@ -81,6 +160,24 @@
 
     // 👉 CHALLENGE 3 EBook
     class EBook {
+      constructor(text, pageSize) {
+    this.text = text;
+    this.pageSize = pageSize;
+    this.currentPage = 0;
+  }
+
+  next() {
+    const start = this.currentPage * this.pageSize;
+    const end = start + this.pageSize;
+    const page = this.text.slice(start, end);
+    this.currentPage++;
+
+    if (page.length === 0) {
+      return null;
+    }
+
+    return page;
+  }
       // 🧠 Constructor takes two arguments:
       //      * First arg is a string with the whole text of the book
       //      * Second arg is the number of characters contained in a single page of the book
@@ -100,6 +197,39 @@
 
     // 👉 CHALLENGE 4 AntFarm
     class AntFarm {
+  constructor(...ants) {
+    this.ants = ants.map((name) => ({ name, health: 100 }));
+  }
+
+  work() {
+    const workingAnts = this.ants.length;
+
+    if (workingAnts === 0) {
+      return "No ants here. Did you work them to death?";
+    }
+
+    this.ants = this.ants.filter(ant => {
+      ant.health -= 20;
+      return ant.health > 0;
+    });
+
+    return `${workingAnts} ants starting work!`;
+  }
+
+  feed(name) {
+  let found = false;
+
+  this.ants.forEach((ant) => {
+    if (ant.name === name) {
+      ant.health += 15; // Increase the health by 15 without limiting it to 100
+      found = true;
+    }
+  });
+
+  return found ? "Yum!" : `${name} not found!`;
+}
+    }
+
       // 🧠 Constructor takes **any** number of arguments, which are strings: the names of your ants
       // 🧠 Instances of AntFarm have an `ants` property holding an array of ants:
       //      * Each ant is an object with a `name` prop and a `health` prop that starts at 100
@@ -131,7 +261,7 @@
       // 👉 HINT: if you are not feeling confident with map and filter, solve the problem with for loops,
       //      and with the piece of mind of all tests passing, refactor to use map/filter
 
-    }
+    
 
     // 🧪 TESTS, do not make any changes below this line ===================
     // 🧪 TESTS, do not make any changes below this line ===================
@@ -428,3 +558,5 @@
 </body>
 
 </html>
+
+  
